--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,15 @@ uuid = "37a64ac8-9262-4a11-880b-74952831694d"
 authors = ["Leonardo Di Bari"]
 version = "1.0.0-DEV"
 
+[deps]
+DCAUtils = "e41cd558-3099-4f6e-a65d-5336857e40aa"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
+
 [compat]
 julia = "1"
 
