--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 PottsGauge = "3bb3bcb6-c561-57d3-939c-408d524c1e5b"
