--- a/Project.toml
+++ b/Project.toml
@@ -13,11 +13,13 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+PlmDCA = "06784e46-84fc-5582-b8de-0e984192b79e"
 PottsGauge = "3bb3bcb6-c561-57d3-939c-408d524c1e5b"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Tullio = "bc48ee85-29a4-5162-ae0b-a64e1601d4bc"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
