--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Leonardo Di Bari"]
 version = "1.0.0-DEV"
 
 [deps]
+ArDCA = "fc7e833f-a3b9-439d-ae82-c6ad11a3e54b"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DCAUtils = "e41cd558-3099-4f6e-a65d-5336857e40aa"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
@@ -13,6 +14,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LogExpFunctions = "2ab3a3ac-af41-5b50-aa03-7779005ae688"
 LoopVectorization = "bdcacae8-1622-11e9-2a5c-532679323890"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
+Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 PlmDCA = "06784e46-84fc-5582-b8de-0e984192b79e"
 PottsGauge = "3bb3bcb6-c561-57d3-939c-408d524c1e5b"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
